# eagv2

./: .gitignore  CURSOR-PROMPT.md  ENV_SETUP_COMPLETE.md  README.md  TEST_WEBAPP.md
S14B/: README.md  dump_code.py  pyproject.toml
S14B/apps/blender/: fdom_map.html
S14B/apps/notepad/: fdom_map.html
S14B/apps/powerpnt/: fdom_map.html
S14B/mcp_client/: README.md  __init__.py  demo.py  fdom_map.py  mcp_server.py  ollama_client.py  task_executor.py
S14B/utils/: gui_controller.py  seraphine.py
S14B/utils/fdom/: app_controller.py  auto_captioner.py  click_engine.py  config_manager.py  element_interactor.py  fdom_analyzer.py  fdom_creator.py  interaction_types.py  interaction_utils.py  interactive_cli.py  navigation_engine.py  screen_manager.py  screenshot_manager.py  seraphine_integrator.py  state_manager.py  state_processor.py  visual_differ.py
S14B/utils/fdom/template_files/: sample.blend  sample.docx  sample.pptx  sample.xlsx
S14B/utils/seraphine_pipeline/: bbox_merger.py  beautiful_visualizer.py  config.json  create_crops.py  crop_test.py  gemini_analyzer.py  gemini_integration.py  helpers.py  ocr_detector.py  parallel_processor.py  pipeline_exporter.py  preprocessor_prompt.txt  prompt.txt  seraphine_generator.py  seraphine_preprocessor.py  seraphine_processor.py  splashscreen_handler.py  yolo_detector.py
S14B/utils/windowManager/: window_functions.py  window_manager.py
S15_NewArch/: CHANGELOG_S20_FIXES.md  app.py  demo_queries.py  demo_rag_only.py  env-template.txt  run_both_queries.py  run_test_queries.py  test_full_flow.py  test_path_fix.py  test_s20_fixes.py  test_simple.py
S15_Share/: CHANGES_REPORT.md  README_WALKTHROUGH.md  Trip_Plan_Result.md  demo_4_tasks.py  (+6 more)
browser_agent/: PROMPT.md  README.md  agent.py  pyproject.toml  requirements.txt  run.py
browser_agent/browser/: __init__.py  actions.py  controller.py
browser_agent/config/: config.yaml
browser_agent/core/: __init__.py  events.py  interfaces.py
browser_agent/form_filler/: __init__.py  google_forms.py
browser_agent/llm/: __init__.py  prompt_manager.py  providers.py
browser_agent/prompts/: field_value.txt  form_analysis.txt  system.txt
browser_agent/strategies/: __init__.py  hybrid_strategy.py  llm_strategy.py  rule_strategy.py
browser_agent/tests/: __init__.py  test_strategies.py
browser_agent/utils/: __init__.py  config.py  observers.py
(+619 files in other folders)
